samples/_failures_safe/1761096093_0b73d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad270754.c: In function ‘main’:
./samples/SAFE/__tmp_ad270754.c:130:13: error: expected ‘;’ at end of input
  130 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_ad270754.c:130:5: error: expected declaration or statement at end of input
  130 |     return 0
      |     ^~~~~~
